cabal-version:       3.0
name:                selective-prob
version:             0.1.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/bolt12/selective-prob
bug-reports:         https://github.com/bolt12/selective-prob/issues
license:             MIT
license-file:        LICENSE
author:              Armando Santos
maintainer:          Armando Santos <armandoifsantos@gmail.com>
copyright:           2020 Armando Santos
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/bolt12/selective-prob.git

common common-options
  build-depends:       base ^>= 4.13.0.0
                       , selective
                       , vector
                       , mwc-probability
                       , async
                       , containers
                       , deepseq
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     SelectiveProb
                       ConcurrentProb

test-suite selective-prob-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       selective-prob
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark selective-prob-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       criterion
                     , selective-prob
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
